--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,14 @@ footer a:hover {
     content: "";
     display: block;
     height: 450px;
+}
 
+.resume-section {
+    margin-bottom: 50px;
+}
+
+.resume-section h2 {
+    border-bottom: 2px dashed #DBA465 ;
 }
 
 /* Profile
@@ -87,6 +94,16 @@ footer a:hover {
 
 /* Projects
 ----------------------------------------*/
+.project-item {
+    display: flow-root;
+    margin: 30px 0;
+}
+
+.project-item img {
+    width: 300px;
+    float: left;
+    margin-right: 20px;
+}
 
 /* Work Experience 
 ----------------------------------------*/
