--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,12 @@ footer a:hover {
     border-bottom: 2px dashed #DBA465 ;
 }
 
+.download-link {
+    position: fixed;
+    top: 5px;
+    left: 5px;
+}
+
 /* Profile
 ----------------------------------------*/
 
