Make the footer a flex box and reorganize the social media buttons, added a hover pseudoclass for extra clarity when user points mouse.

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,9 @@ footer a:hover {
 footer {
     background: #7F6150;
     color: #DBA465;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
 }
 
 .socials {
@@ -138,9 +141,14 @@ footer {
     padding: 0;
 }
 .socials li {
-    display: inline-block
+    display: inline-block;
+    margin-left: 10px;
 }
 
 .socials img {
     width: 32px;
+}
+
+.socials img:hover {
+    opacity: 0.5;
 }
