--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ Dark to Light
 */
 html {
     box-sizing: border-box;
+    font-size: 62.5%; /* set default to 10px */
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -27,6 +28,25 @@ html, body {
 body {
     background: #E4E4D6; /* Moon Mist */
     margin: 0;
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.5rem;
+    line-height: 1.4;
+}
+
+h1, h2, h3 {
+    font-family: "Caveat", cursive;
+    font-weight: 400;
+    margin: 0;
+}
+h1 {
+    font-size: 7rem;
+    line-height: 0.85;
+}
+h2 {
+    font-size: 3.6rem;
+}
+h3 {
+    font-size: 2.4rem;
 }
 
 /* links */
