--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,13 @@ footer a:hover {
     background: #3C8453; /* Dark Green */
     color: #E4E4D6;
     text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    display: inline-block;
+    padding: 7px;
+    letter-spacing: .15em;
+    line-height: 1;
+    border-radius: 4px;
 }
 
 .content-wrapper {
@@ -120,6 +127,7 @@ footer a:hover {
     position: fixed;
     top: 5px;
     left: 5px;
+    font-size: 1.5rem;
 }
 
 /* Profile
@@ -145,11 +153,25 @@ footer a:hover {
     display: grid;
     grid-template-columns: 300px 1fr;
     column-gap: 20px;
+    margin: 30px 0;
+}
+
+.work-details p {
+    margin: 0;
+}
+
+.work-summary p:first-child {
+    margin: 0;
 }
 
 /* Education
 ----------------------------------------*/
-
+.education-item {
+    margin: 30px 0;
+}
+.education-item p {
+    margin: 0;
+}
 
 /* FOOTER
 ----------------------------------------*/
