--- a/css/styles.css
+++ b/css/styles.css
@@ -130,21 +130,48 @@ footer a:hover {
     font-size: 1.5rem;
 }
 
-/* Profile
-----------------------------------------*/
+@media screen and (max-width:1200px) {
+    .download-link {
+        position: absolute;
+    }
+}
 
 /* Projects
 ----------------------------------------*/
 .project-item {
-    display: flow-root;
     margin: 30px 0;
 }
 
 .project-item img {
     width: 300px;
-    float: left;
-    margin-right: 20px;
 }
+
+@media screen and (min-width:860px) {
+    .project-item {
+        display: flow-root;
+    }
+    .project-item img {
+        float: left;
+        margin-right: 20px;
+    }
+}
+@media screen and (min-width:650px) and (max-width:859px) {
+    .project-wrapper {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 20px;
+    }
+    .project-item img {
+        width: 100%;
+    }
+}
+@media screen and (max-width:500px) {
+    .project-item img {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+}
+
 
 /* Work Experience 
 ----------------------------------------*/
