--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,15 @@ footer a:hover {
     padding: 30px;
 }
 
+@media screen and (max-width:650px) {
+    .home .content-wrapper {
+        padding: 10px;
+    }
+    .content-bg {
+        padding: 20px;
+    }
+}
+
 /* RESUME 
 ----------------------------------------*/
 .resume header::before {
@@ -133,6 +142,18 @@ footer a:hover {
 @media screen and (max-width:1200px) {
     .download-link {
         position: absolute;
+    }
+}
+
+@media screen and (max-width:500px) {
+    .resume header::before {
+        height: 200px;
+        h1 {
+            font-size: 5rem;
+        }
+        h2 {
+            font-size: 2.5rem;
+        }
     }
 }
 
@@ -177,9 +198,6 @@ footer a:hover {
 ----------------------------------------*/
 
 .work-item {
-    display: grid;
-    grid-template-columns: 300px 1fr;
-    column-gap: 20px;
     margin: 30px 0;
 }
 
@@ -187,8 +205,15 @@ footer a:hover {
     margin: 0;
 }
 
-.work-summary p:first-child {
-    margin: 0;
+@media screen and (min-width:860px) {
+    .work-item {
+        display: grid;
+        grid-template-columns: 300px 1fr;
+        column-gap: 20px;
+    }
+    .work-summary p:first-child {
+        margin: 0;
+    }
 }
 
 /* Education
@@ -206,9 +231,6 @@ footer a:hover {
 footer {
     background: #7F6150;
     color: #DBA465;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 20px;
 }
 
 .socials {
@@ -226,4 +248,19 @@ footer {
 
 .socials img:hover {
     opacity: 0.5;
+}
+
+@media screen and (min-width: 860px) {
+    footer {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 20px;
+    }
+}
+
+@media screen and (max-width: 859px) {
+    footer {
+        text-align: center;
+        padding: 10px;
+    }
 }
